<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yrc"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField1"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="38dp"
        android:hint="@string/name"
        android:textColorHint="#D3D3D3"
        app:boxStrokeColor="#FF0000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="38dp"
        android:hint="@string/blood_group"
        android:textColorHint="#D3D3D3"
        app:boxStrokeColor="#FF0000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField3"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="38dp"
        android:hint="@string/reason_for_blood_request"
        app:boxStrokeColor="#FF0000"
        android:textColorHint="#D3D3D3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField4"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="38dp"
        android:hint="@string/units_of_blood_needed"
        app:boxStrokeColor="#FF0000"
        android:textColorHint="#D3D3D3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField5"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="38dp"
        android:hint="@string/hospital_and_location"
        app:boxStrokeColor="#FF0000"
        android:textColorHint="#D3D3D3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField6"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="38dp"
        android:hint="@string/contact_no"
        app:boxStrokeColor="#FF0000"
        android:textColorHint="#D3D3D3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="phone"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:backgroundTint="#FF0000"
        android:layout_marginStart="126dp"
        android:layout_marginTop="10dp"
        />


</LinearLayout>